--- a/mobile/app/src/main/res/layout/lista_leituras.xml
+++ b/mobile/app/src/main/res/layout/lista_leituras.xml
@@ -29,4 +29,12 @@
         android:gravity="center"
         android:textSize="10sp" />
 
+    <TextView
+        android:id="@+id/usuario"
+        android:layout_width="80dp"
+        android:layout_height="28dp"
+        android:text="TextView"
+        android:gravity="center"
+        android:textSize="10sp"/>
+
 </LinearLayout>
