--- a/mobile/app/src/main/res/layout/activity_separados.xml
+++ b/mobile/app/src/main/res/layout/activity_separados.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activitys.Pedidos" >
+    tools:context=".activitys.Separados" >
 
     <HorizontalScrollView
         android:layout_width="0dp"
